# tdpvp

./: AGENTS.md
.github/workflows/: client-desktop-release.yml  server-colyseus-deploy.yml
ai/: ai-behaviour.md  anti-patterns.md  architecture.md  coding-standards.md  development-process.md  domain-model.md  repository-rules.md  system-prompts.md
project/: .gitignore  Makefile  README.md  package.json
project/apps/client/src-tauri/: Cargo.toml  tauri.conf.json
project/apps/client/src-tauri/capabilities/: default.json
project/apps/client/src-tauri/icons/: icon.icns
project/apps/client/src-tauri/src/: main.rs
project/decisions/: README.md  adr-0001-authoritative-server.md  adr-0002-threejs-primary-client-rendering.md
project/docs/: architecture-overview.md  client-3d-rendering.md  client-desktop-packaging-and-updates.md  game-overview.md  gameplay-design.md  implementation-foundation.md  multiplayer-design.md  networking-model.md  react-ui-shell-flow.md  roadmap.md  server-colyseus-deployment.md
project/schemas/: game-state-schema.md  network-messages.md  player-state-schema.md
project/simulation/: deterministic-simulation.md  game-loop.md  tick-model.md
project/systems/: combat-system.md  mana-economy.md  progression-system.md  tower-system.md  units-system.md
project/tasks/: README.md  task-0001-expand-player-command-pipeline.md  task-0002-model-authoritative-battlefield-state.md  task-0003-render-authoritative-entities-on-client.md  task-0004-integrate-supabase-auth-foundation.md  task-0005-build-first-playable-combat-loop.md  (+44 more)
(+50 files in other folders)
