[package]
name = "tdpvp-client"
version = "0.1.0"
description = "TDPvP desktop client shell"
authors = ["tdpvp"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
